sonar and pr comments